--- a/src/app/pages/member-list/member-list.component.html
+++ b/src/app/pages/member-list/member-list.component.html
@@ -1,10 +1,42 @@
-<table>
-  <tr>
-    <th>Nombre</th>
-    <th>Email</th>
-  </tr>
-  <tr *ngFor="let member of members">
-    <td>{{ member.name }}</td>
-    <td>{{ member.email }}</td>
-  </tr>
+<h2>Member List</h2>
+
+<table *ngIf="members.length; else noMembers" border="1" cellpadding="8" cellspacing="0">
+  <thead>
+    <tr>
+      <th>First Name</th>
+      <th>Last Name</th>
+      <th>DNI</th>
+      <th>Email</th>
+      <th>Address</th>
+      <th>Bank Account</th>
+      <th>Date of Birth</th>
+      <th>Join Date</th>
+      <th>Active</th>
+      <th>Ibercaja</th>
+      <th>Has Share</th>
+      <th>Share Number</th>
+      <th>Parent Member ID</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let member of members">
+      <td>{{ member.name }}</td>
+      <td>{{ member.surname }}</td>
+      <td>{{ member.dni }}</td>
+      <td>{{ member.email }}</td>
+      <td>{{ member.address }}</td>
+      <td>{{ member.bankAccount }}</td>
+      <td>{{ member.birthDate| date: 'dd/MM/yyyy' }}</td>
+      <td>{{ member.joinDate | date: 'dd/MM/yyyy' }}</td>
+      <td>{{ member.isActive ? 'Yes' : 'No' }}</td>
+      <td>{{ member.isIbercaja ? 'Yes' : 'No' }}</td>
+      <td>{{ member.hasShare ? 'Yes' : 'No' }}</td>
+      <td>{{ member.shareNumber ?? '-' }}</td>
+      <td>{{ member.parentMemberId || '-' }}</td>
+    </tr>
+  </tbody>
 </table>
+
+<ng-template #noMembers>
+  <p>No members found.</p>
+</ng-template>
